# synfig

./: 3-package-osx-dmg.sh  CMakeLists.txt  ChangeLog-generate.sh  ChangeLog.md  README.md  version-release.sh
ETL/: NEWS  README  configure.ac
synfig-core/: NEWS  README  configure.ac
synfig-core/po/: ru.po
synfig-studio/: CMakeLists.txt  NEWS  README  configure.ac  org.synfig.SynfigStudio.appdata.xml.in
synfig-studio/images/: Makefile.am  action_flat_interpolation_icon.sif  background_rendering_icon.sif  decr_resolution_icon.sif  duck_angle_icon.sif  duck_position_icon.sif  duck_radius_icon.sif  duck_tangent_icon.sif  duck_vertex_icon.sif  duck_width_icon.sif  duplicate_icon.sif  incr_resolution_icon.sif  layer_other_stroboscope_icon.sif  logo.sif  preview_options_icon.sif  render_options_icon.sif  reset_colors_icon.sif  set_fill_color.sif  set_outline_color.sif  show_guideline_icon.sif  splash_screen_morevna.sif  swap_colors_icon.sif  tool_draw_icon.sif  tool_fill_icon.sif  tool_text_icon.sif  tool_width_icon.sif  type_angle_icon.sif  type_bool_icon.sif  type_canvas_icon.sif  type_integer_icon.sif  type_list_icon.sif  type_real_icon.sif  type_segment_icon.sif  type_splinepoint_icon.sif  type_string_icon.sif  type_time_icon.sif  valuenode_icon.sif
synfig-studio/po/: ru.po
synfig-studio/src/gui/: CMakeLists.txt  Makefile.am  app.cpp  app.h  canvasview.cpp  mainwindow.cpp  mainwindow.h  updatechecker.cpp
synfig-studio/src/gui/dialogs/: about.cpp  dialog_setup.cpp  dialog_setup.h
synfig-studio/src/gui/states/: state_draw.cpp  state_gradient.cpp
(+2 files in other folders)
